--- a/src/main/resources/public/template/role/roleEdit.html
+++ b/src/main/resources/public/template/role/roleEdit.html
@@ -355,7 +355,7 @@
 
         function getRoleList(showProgressbar) {
             const data = {
-                search: encodeURIComponent(document.getElementById('search').value.trim())
+                search: encodeURIComponent(document.getElementById('search').value)
             };
             const urlParam = 'search=' + data.search;
             const opt = {
