--- a/src/main/resources/public/template/numbering-pattern/numberingPatternEdit.html
+++ b/src/main/resources/public/template/numbering-pattern/numberingPatternEdit.html
@@ -299,7 +299,7 @@
         /** 패턴 리스트 출력 기능 **/
         function getPatternList(showProgressbar) {
             const data = {
-                search: encodeURIComponent(document.getElementById('search').value.trim())
+                search: encodeURIComponent(document.getElementById('search').value)
             };
             const urlParam = 'search=' + data.search;
             const opt = {
