--- a/src/main/resources/public/template/numbering-rule/numberingRuleEdit.html
+++ b/src/main/resources/public/template/numbering-rule/numberingRuleEdit.html
@@ -339,7 +339,7 @@
         /** 문서번호 리스트 출력 기능 **/
         function getRuleList(showProgressbar) {
             const data = {
-                search: encodeURIComponent(document.getElementById('search').value.trim())
+                search: encodeURIComponent(document.getElementById('search').value)
             };
             const urlParam = 'search=' + data.search;
             const opt = {
