#9929 CI Attribute 목록 조회 화면 구현 1. attribute 목록 화면 작성 2. itsm, engine의 서버단 조회 기능 구현 (검색 포함) 3. CMDB 공통소스 작업 (provider)

--- a/src/main/resources/public/src/scss/theme/default/_gnb.scss
+++ b/src/main/resources/public/src/scss/theme/default/_gnb.scss
@@ -212,5 +212,8 @@
     &-token {
       @include maskImage($icon-gnb-token, 1.25rem, 1.25rem, no-repeat, center, null, $blue-gray); // 20xp 20px
     }
+    &-cmdb {
+      @include maskImage($icon-gnb-cmdb, 1.25rem, 1.25rem, no-repeat, center, null, $blue-gray); // 20xp 20px
+    }
   }
 }
