--- a/src/main/resources/public/src/scss/theme/default/_variables.scss
+++ b/src/main/resources/public/src/scss/theme/default/_variables.scss
@@ -34,6 +34,7 @@ $icon-gnb-notice:                             $icon-folder-path + "gnb/icon_gnb_
 $icon-gnb-config:                             $icon-folder-path + "gnb/icon_gnb_config.svg";
 $icon-gnb-workflow:                           $icon-folder-path + "gnb/icon_gnb_workflow.svg";
 $icon-gnb-token:                              $icon-folder-path + "gnb/icon_gnb_token.svg";
+$icon-gnb-cmdb:                               $icon-folder-path + "gnb/icon_gnb_cmdb.svg";
 
 $icon-arrow-left:                             $icon-folder-path + "icon_arrow_left.svg";
 $icon-arrow-bottom:                           $icon-folder-path + "icon_arrow_bottom.svg";
