--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -2043,7 +2043,8 @@ button .icon-plus {
 .code-header,
 .image-header,
 .numbering-pattern-header,
-.numbering-rule-header {
+.numbering-rule-header,
+.attribute-header {
   padding: 2.188rem 3.75rem 0 3.75rem;
   background-color: #F7F8F9;
 }
@@ -2070,7 +2071,8 @@ button .icon-plus {
 .role-content,
 .code-content,
 .numbering-pattern-content,
-.numbering-rule-content {
+.numbering-rule-content,
+.attribute-content {
   padding: 0.9375rem 3.75rem;
   background-color: #F7F8F9;
 }
@@ -2590,6 +2592,17 @@ button .icon-plus {
   height: 1.25rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_token.svg");
   mask-image: url("../media/icons/gnb/icon_gnb_token.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  background: #929AA6;
+}
+.gnb .icon-gnb-cmdb {
+  width: 1.25rem;
+  height: 1.25rem;
+  -webkit-mask-image: url("../media/icons/gnb/icon_gnb_cmdb.svg");
+  mask-image: url("../media/icons/gnb/icon_gnb_cmdb.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
