새기능 #9898 폼 디자이너에서 컴포넌트별 라벨링 설정 기능 구현

--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -683,6 +683,10 @@ input, button, select, optgroup, textarea {
   margin-bottom: 0.4375rem;
 }
 
+.form-container .form-properties .property-group .property-field .property-field-table {
+  margin-top: 1.25rem;
+}
+
 .form-container .form-properties .property-group .property-field .property-field-range input[type=range] {
   width: 72%;
 }
