--- a/src/main/resources/public/src/scss/form/_layout.scss
+++ b/src/main/resources/public/src/scss/form/_layout.scss
@@ -147,6 +147,10 @@
           display: inline-block;
           margin-bottom: 0.4375rem; // 7px
         }
+        // key value attribute
+        .property-field-table {
+          margin-top: 1.25rem; // 20px
+        }
         // range
         .property-field-range {
           input[type=range] {
