--- a/src/main/resources/public/template/form/formDesignerEdit.html
+++ b/src/main/resources/public/template/form/formDesignerEdit.html
@@ -223,7 +223,7 @@
                     <button type="button" class="ghost-line btn-option" id="option-plus"><span class="icon icon-plus"></span></button>
                 </div>
             </h5>
-            <table class="property-field-table">
+            <table class="property-field-table" id="table-option">
                 <colgroup>
                     <col width="20%">
                     <col width="40%">
