CMDB Class ITSM, Engine Module 구현

--- a/src/main/resources/public/src/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/src/scss/theme/default/_layout.scss
@@ -118,7 +118,8 @@
 .image-header,
 .numbering-pattern-header,
 .numbering-rule-header,
-.attribute-header {
+.attribute-header,
+.class-header{
   padding: 2.188rem 3.75rem 0 3.75rem; // 35px 60px 0px 60px
   background-color: $light-gray;
 }
@@ -296,7 +297,8 @@
 .role-content-edit,
 .code-content-edit,
 .numbering-pattern-content-edit,
-.numbering-rule-content-edit {
+.numbering-rule-content-edit,
+.class-content-edit{
   height: 41.25rem; // 660px
   margin: 0 0 1.875rem 0; // 30px
   // 스크롤바 
