--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -2044,7 +2044,8 @@ button .icon-plus {
 .image-header,
 .numbering-pattern-header,
 .numbering-rule-header,
-.attribute-header {
+.attribute-header,
+.class-header {
   padding: 2.188rem 3.75rem 0 3.75rem;
   background-color: #F7F8F9;
 }
@@ -2200,7 +2201,8 @@ button .icon-plus {
 .role-content-edit,
 .code-content-edit,
 .numbering-pattern-content-edit,
-.numbering-rule-content-edit {
+.numbering-rule-content-edit,
+.class-content-edit {
   height: 41.25rem;
   margin: 0 0 1.875rem 0;
 }
@@ -2208,14 +2210,16 @@ button .icon-plus {
 .role-content-edit .edit-form,
 .code-content-edit .edit-form,
 .numbering-pattern-content-edit .edit-form,
-.numbering-rule-content-edit .edit-form {
+.numbering-rule-content-edit .edit-form,
+.class-content-edit .edit-form {
   padding: 0 1.875rem 0 4.0625rem;
 }
 .auth-content-edit .edit-form .edit-row,
 .role-content-edit .edit-form .edit-row,
 .code-content-edit .edit-form .edit-row,
 .numbering-pattern-content-edit .edit-form .edit-row,
-.numbering-rule-content-edit .edit-form .edit-row {
+.numbering-rule-content-edit .edit-form .edit-row,
+.class-content-edit .edit-form .edit-row {
   margin-top: 0.625rem;
 }
 
