classEdit.html 수정 진행

--- a/src/main/resources/public/template/cmdb/classEdit.html
+++ b/src/main/resources/public/template/cmdb/classEdit.html
@@ -84,6 +84,7 @@
 
             if (jsonData.className === null || jsonData.className.trim() === '') {
                 aliceJs.alertWarning([[#{cmdb.class.msg.enterClassName}]]);
+                return false;
             }
 
             let url = '/rest/cmdb/classes';
