--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1988,7 +1988,7 @@ button .icon-plus {
   background-color: #ffffff;
   padding: 9.625rem 2.1875rem 3.125rem 0;
 }
-.itsm-container .aside.code {
+.itsm-container .aside.tree {
   width: 62.5rem;
 }
 
@@ -2044,7 +2044,8 @@ button .icon-plus {
 .image-header,
 .numbering-pattern-header,
 .numbering-rule-header,
-.attribute-header {
+.attribute-header,
+.type-header {
   padding: 2.188rem 3.75rem 0 3.75rem;
   background-color: #F7F8F9;
 }
@@ -2072,7 +2073,8 @@ button .icon-plus {
 .code-content,
 .numbering-pattern-content,
 .numbering-rule-content,
-.attribute-content {
+.attribute-content,
+.type-content {
   padding: 0.9375rem 3.75rem;
   background-color: #F7F8F9;
 }
@@ -2199,6 +2201,7 @@ button .icon-plus {
 .auth-content-edit,
 .role-content-edit,
 .code-content-edit,
+.type-content-edit,
 .numbering-pattern-content-edit,
 .numbering-rule-content-edit {
   height: 41.25rem;
@@ -2207,6 +2210,7 @@ button .icon-plus {
 .auth-content-edit .edit-form,
 .role-content-edit .edit-form,
 .code-content-edit .edit-form,
+.type-content-edit .edit-form,
 .numbering-pattern-content-edit .edit-form,
 .numbering-rule-content-edit .edit-form {
   padding: 0 1.875rem 0 4.0625rem;
@@ -2214,6 +2218,7 @@ button .icon-plus {
 .auth-content-edit .edit-form .edit-row,
 .role-content-edit .edit-form .edit-row,
 .code-content-edit .edit-form .edit-row,
+.type-content-edit .edit-form .edit-row,
 .numbering-pattern-content-edit .edit-form .edit-row,
 .numbering-rule-content-edit .edit-form .edit-row {
   margin-top: 0.625rem;
