--- a/src/main/resources/public/src/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/src/scss/theme/default/_layout.scss
@@ -59,8 +59,8 @@
     background-color: $white;
     padding: 9.625rem 2.1875rem 3.125rem 0; // 154px 35px 50px 0
 
-    // 코드 화면은 너비가 다름
-    &.code { width: 62.5rem; } // 1000px
+    // 트리 화면은 너비가 다름
+    &.tree { width: 62.5rem; } // 1000px
   }
 }
 // 슬라이드 효과
@@ -118,7 +118,8 @@
 .image-header,
 .numbering-pattern-header,
 .numbering-rule-header,
-.attribute-header {
+.attribute-header,
+.type-header {
   padding: 2.188rem 3.75rem 0 3.75rem; // 35px 60px 0px 60px
   background-color: $light-gray;
 }
@@ -295,6 +296,7 @@
 .auth-content-edit,
 .role-content-edit,
 .code-content-edit,
+.type-content-edit,
 .numbering-pattern-content-edit,
 .numbering-rule-content-edit {
   height: 41.25rem; // 660px
