--- a/src/main/resources/public/src/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/src/scss/theme/default/_layout.scss
@@ -102,6 +102,7 @@
 // 업무흐름 관리 > 이미지 관리
 // 업무흐름 관리 > 패턴
 // 업무흐름 관리 > 문서번호
+// CMDB > Class
 .notice-header,
 .faq-header,
 .download-header,
@@ -119,7 +120,7 @@
 .numbering-pattern-header,
 .numbering-rule-header,
 .attribute-header,
-.class-header{
+.cmdb-class-header{
   padding: 2.188rem 3.75rem 0 3.75rem; // 35px 60px 0px 60px
   background-color: $light-gray;
 }
@@ -292,13 +293,13 @@
   background-color: $white;
   border-top: $layout-header-border;
 }
-// 역할, 권한, 코드, 패턴, 문서번호
+// 역할, 권한, 코드, 패턴, 문서번호, CMDB Class
 .auth-content-edit,
 .role-content-edit,
 .code-content-edit,
 .numbering-pattern-content-edit,
 .numbering-rule-content-edit,
-.class-content-edit{
+.cmdb-class-content-edit{
   height: 41.25rem; // 660px
   margin: 0 0 1.875rem 0; // 30px
   // 스크롤바 
