--- a/src/main/resources/public/template/cmdb/classEdit.html
+++ b/src/main/resources/public/template/cmdb/classEdit.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="class-header">
+    <div class="cmdb-class-header">
         <div class="header-title flex-row align-items-baseline">
             <h1 th:text="#{cmdb.class.label.management}"></h1>
             <h6 class="description" th:text="#{cmdb.class.msg.editDescription}"></h6>
@@ -27,7 +27,7 @@
 </th:block>
 <th:block layout:fragment="aside">
     <div class="aside">
-        <div class="class-content-edit flex-column">
+        <div class="cmdb-class-content-edit flex-column">
             <div class="edit-form">
                 <div class="edit-row flex-column">
                     <label class="form-title" th:text="#{cmdb.class.label.classId}"></label>
