--- a/src/main/resources/public/template/code/codeEdit.html
+++ b/src/main/resources/public/template/code/codeEdit.html
@@ -30,7 +30,7 @@
     </div>
 </th:block>
 <th:block layout:fragment="aside">
-    <div class="aside tree">
+    <div class="aside code">
         <div class="code-content-edit flex-column">
             <div class="edit-form">
                 <div class="edit-row flex-row">
