--- a/src/main/resources/public/template/cmdb/classList.html
+++ b/src/main/resources/public/template/cmdb/classList.html
@@ -9,7 +9,7 @@
     <tr class="flex-row align-items-center">
         <th style="width:33%;" class="align-left" th:text="#{cmdb.class.label.name}"></th>
         <th style="width:33%;" class="align-left" th:text="#{cmdb.class.label.description}"></th>
-        <th style="width:34%;" class="align-left" th:text="#{cmdb.class.label.pClassId}"></th>
+        <th style="width:34%;" class="align-left" th:text="#{cmdb.class.label.pClassName}"></th>
     </tr>
     </thead>
     <tbody class="list-body">
@@ -17,7 +17,8 @@
         <td style="width:100%" colspan="3" class="align-center" th:text="#{common.msg.noData}"></td>
     </tr>
     <tr class="flex-row align-items-center" th:each="class : ${classList}">
-        <td style="width:33%;" class="align-left" th:id="${class.classId}" name="className" th:text="${class.className}"></td>
+        <td style="width:33%;" class="align-left" th:id="${class.classId}" name="className"
+            th:text="${class.className}"></td>
         <td style="width:33%;" class="align-left" id="classDesc" name="classDesc" th:text="${class.classDesc}"></td>
         <td style="width:34%;" class="align-left" id="pClassId" name="pClassId" th:text="${class.pClassId}"></td>
     </tr>
