--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -2201,8 +2201,7 @@ button .icon-plus {
 .role-content-edit,
 .code-content-edit,
 .numbering-pattern-content-edit,
-.numbering-rule-content-edit,
-.class-content-edit {
+.numbering-rule-content-edit {
   height: 41.25rem;
   margin: 0 0 1.875rem 0;
 }
@@ -2210,16 +2209,14 @@ button .icon-plus {
 .role-content-edit .edit-form,
 .code-content-edit .edit-form,
 .numbering-pattern-content-edit .edit-form,
-.numbering-rule-content-edit .edit-form,
-.class-content-edit .edit-form {
+.numbering-rule-content-edit .edit-form {
   padding: 0 1.875rem 0 4.0625rem;
 }
 .auth-content-edit .edit-form .edit-row,
 .role-content-edit .edit-form .edit-row,
 .code-content-edit .edit-form .edit-row,
 .numbering-pattern-content-edit .edit-form .edit-row,
-.numbering-rule-content-edit .edit-form .edit-row,
-.class-content-edit .edit-form .edit-row {
+.numbering-rule-content-edit .edit-form .edit-row {
   margin-top: 0.625rem;
 }
 
@@ -2298,6 +2295,23 @@ button .icon-plus {
   width: 7.5rem;
 }
 .numbering-rule-content-edit .btn-minus {
+  padding: 0;
+}
+
+.class-content-edit {
+  height: 41.25rem;
+  margin: 0 0 1.875rem 0;
+}
+.class-content-edit .edit-form {
+  padding: 0 1.875rem 0 4.0625rem;
+}
+.class-content-edit .edit-form .edit-row {
+  margin-top: 0.625rem;
+}
+.class-content-edit .attribute {
+  width: 27.94rem;
+}
+.class-content-edit .btn-minus {
   padding: 0;
 }
 
