--- a/src/main/resources/public/src/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/src/scss/theme/default/_layout.scss
@@ -297,8 +297,7 @@
 .role-content-edit,
 .code-content-edit,
 .numbering-pattern-content-edit,
-.numbering-rule-content-edit,
-.class-content-edit{
+.numbering-rule-content-edit{
   height: 41.25rem; // 660px
   margin: 0 0 1.875rem 0; // 30px
   // 스크롤바 
@@ -387,6 +386,19 @@
     width: 7.5rem // 120px
   }
   .btn-minus { padding: 0;}
+}
+// CMDB > Class
+.class-content-edit{
+  height: 41.25rem; // 660px
+  margin: 0 0 1.875rem 0; // 30px
+  // 스크롤바
+  .edit-form {
+    padding: 0 1.875rem 0 4.0625rem; // 0 30px 0 65px
+
+    .edit-row {  margin-top: 0.625rem; } // 10px
+  }
+  .attribute { width: 27.94rem; } // 447px;
+  .btn-minus { padding: 0; }
 }
 
 /////////////////////////////////////////////// VIEW /////////////////////////////////////////////////////
