--- a/src/main/resources/public/template/cmdb/classEdit.html
+++ b/src/main/resources/public/template/cmdb/classEdit.html
@@ -37,7 +37,7 @@
                 <input type="hidden" id="txtPClassId" name="txtPClassId"/>
                 <div class="edit-row flex-column">
                     <label class="form-title" th:text="#{cmdb.class.label.pClassName}" for="txtPClassName"></label>
-                    <input type="text" id="txtPClassName" name="txtPClassName" maxlength="128"/>
+                    <input type="text" id="txtPClassName" name="txtPClassName" maxlength="128" readonly/>
                 </div>
                 <div class="edit-row flex-column">
                     <label class="required" th:text="#{cmdb.class.label.name}" for="txtClassName"></label>
@@ -58,6 +58,7 @@
                         </label>
                     </div>
                 </div>
+                <div id="attribute"></div>
             </div>
         </div>
         <div class="flex-row justify-content-end">
@@ -146,11 +147,25 @@
                 url: '/rest/cmdb/classes/' + encodeURIComponent(cmdbClassName),
                 callbackFunc: function (response) {
                     let responseJson = JSON.parse(response.responseText);
+                    var attribute = document.getElementById('attribute');
                     document.getElementById('txtClassId').value = responseJson.classId;
                     document.getElementById('txtPClassId').value = responseJson.pclassId;
                     document.getElementById('txtPClassName').value = responseJson.pclassName;
                     document.getElementById('txtClassName').value = responseJson.className;
                     document.getElementById('txtClassDesc').value = responseJson.classDesc;
+                    while (attribute.hasChildNodes()) {
+                        attribute.removeChild(attribute.firstChild);
+                    }
+                    responseJson.extendsAttributes.forEach(function (data) {
+                        if (data !== null) {
+                            drawAttribute({key: data.attributeId, value: data.attributeName}, false);
+                        }
+                    });
+                    responseJson.attributes.forEach(function (data) {
+                        if (data !== null) {
+                            drawAttribute({key: data.attributeId, value: data.attributeName}, true);
+                        }
+                    });
                 }
             };
             aliceJs.sendXhr(opt);
@@ -290,8 +305,36 @@
             aliceJs.sendXhr(opt);
         };
 
-        function addAttribute() {
+        function drawAttribute(param, editable) {
+            const divRow = document.createElement('div');
+            divRow.name = 'attributeDiv';
+            divRow.classList.add('edit-row', 'flex-row');
 
+            const inputElem = document.createElement('input');
+            inputElem.type = 'text';
+            inputElem.id = param.key;
+            inputElem.name = 'attribute';
+            inputElem.value = (typeof param !== 'undefined') ? param.value : '';
+            inputElem.classList.add('attribute');
+            inputElem.readOnly = true;
+
+            const deleteBtn = document.createElement('button');
+            deleteBtn.classList.add('btn-minus');
+            const deleteIcon = document.createElement('span');
+            deleteIcon.classList.add('icon-delete-gray', 'ml-1');
+            deleteBtn.appendChild(deleteIcon);
+            deleteBtn.addEventListener('click', function () {
+                aliceJs.confirmIcon(i18n.msg('cmdb.class.msg.confirmDeleteAttribute'), function () {
+                    const row = deleteBtn.parentNode;
+                    row.remove();
+                }, null);
+            });
+            divRow.appendChild(inputElem);
+            if (editable) {
+                inputElem.readOnly = false;
+                divRow.appendChild(deleteBtn);
+            }
+            document.getElementById('attribute').appendChild(divRow);
         }
 
         /*]]>*/
