--- a/src/main/resources/public/template/cmdb/attributeEdit.html
+++ b/src/main/resources/public/template/cmdb/attributeEdit.html
@@ -120,7 +120,14 @@
                         attributeText: document.querySelector('#attributeText').value,
                         attributeDesc: document.querySelector('#attributeDesc').value
                     }
-                    restSubmit(method, '/rest/cmdb/attributes/' + /*[[${attribute?.attributeId}]]*/'', data);
+                    let url = '/rest/cmdb/attributes';
+                    if (method === 'put') {
+                        data.attributeId = /*[[${attribute?.attributeId}]]*/'';
+                        url += '/' + /*[[${attribute?.attributeId}]]*/'';
+                    }
+                    // TODO: attributeValue 저장 (attributeType 값에 따른 다른 데이터)
+
+                    restSubmit(method, url, data);
                 }
             } else if (method === 'delete') {
                 aliceJs.confirmIcon(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/cmdb/attributes/' + /*[[${attribute?.attributeId}]]*/'');
@@ -142,7 +149,7 @@
                                 });
                                 break;
                             case STATUS_ERROR_CMDB_ATTRIBUTE_NAME_DUPLICATION:
-                                //aliceJs.alertSuccess(i18n.msg('customCode.msg.customCodeUsed'));
+                                aliceJs.alertSuccess(i18n.msg('cmdb.attribute.msg.attributeNameUsed'));
                                 break;
                             default :
                                 aliceJs.alertDanger(i18n.msg('common.msg.fail'));
