--- a/src/main/resources/public/template/cmdb/classEdit.html
+++ b/src/main/resources/public/template/cmdb/classEdit.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="class-header">
+    <div class="cmdb-class-header">
         <div class="header-title flex-row align-items-baseline">
             <h1 th:text="#{cmdb.class.label.management}"></h1>
             <h6 class="description" th:text="#{cmdb.class.msg.editDescription}"></h6>
@@ -31,7 +31,7 @@
 </th:block>
 <th:block layout:fragment="aside">
     <div class="aside">
-        <div class="class-content-edit flex-column">
+        <div class="cmdb-class-content-edit flex-column">
             <div class="edit-form">
                 <input type="hidden" id="txtClassId" name="txtClassId"/>
                 <input type="hidden" id="txtPClassId" name="txtPClassId"/>
@@ -137,7 +137,7 @@
                 getCmdbClassList(false);
             });
 
-            OverlayScrollbars(document.querySelectorAll('.class-content-edit'), {className: 'scrollbar'})
+            OverlayScrollbars(document.querySelectorAll('.cmdb-class-content-edit'), {className: 'scrollbar'})
         };
 
         /** CMDB Class 상세 정보 **/
@@ -147,7 +147,7 @@
                 url: '/rest/cmdb/classes/' + encodeURIComponent(cmdbClassName),
                 callbackFunc: function (response) {
                     let responseJson = JSON.parse(response.responseText);
-                    var attribute = document.getElementById('attribute');
+                    let attribute = document.getElementById('attribute');
                     document.getElementById('txtClassId').value = responseJson.classId;
                     document.getElementById('txtPClassId').value = responseJson.pclassId;
                     document.getElementById('txtPClassName').value = responseJson.pclassName;
@@ -173,6 +173,11 @@
 
         /** 추가 버튼 **/
         function onCreate() {
+            let attribute = document.getElementById('attribute');
+            while (attribute.hasChildNodes()) {
+                attribute.removeChild(attribute.firstChild);
+            }
+
             document.getElementById('txtClassId').value = '';
             document.getElementById('txtPClassId').value = '';
             document.getElementById('txtClassName').value = '';
